# docintel

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.gpu.yml  docker-compose.override.yml  docker-compose.storage.yml  docker-compose.yml
.cursor/plans/: enterprise_ingestion_redesign_a63f0f25.plan.md
.cursor/rules/: general-project-rule.mdc
.github/workflows/: ci.yml  document-service.yml  integration-tests.yml  rag-service.yml
config/: defaults.env
config/authentik/blueprints/: docintel-setup.yaml
config/grafana/dashboards/: 00-overview.json  01-rag-service.json  02-spring-services.json  03-infrastructure.json  04-analytics-clickhouse.json
config/langfuse/: init.sh
config/nginx/: zitadel-oidc.conf
config/opa/policies/: docintel.rego  docintel_chunk.rego
config/opa/tests/: docintel_test.rego
config/postgres/: 00-roles.sh  init.sql
config/postgres/migrations/: 2026-04-add-sampling-fields.sql  2026-04-add-stream-thinking.sql  2026-05-add-model-kind-and-docs-grant.sql  2026-05-add-vlm-rerank-platform-settings.sql  2026-05-grant-tenants-rls-docs.sql
config/prometheus/: prometheus.yml
config/prometheus/rules/: docintel.yml
config/qdrant/: init-collections.sh
config/zitadel/: action-claims.js  system-api-public.pem  system-api.yaml
config/zitadel/actions-v2/: Dockerfile  docker-entrypoint.sh  main.py
docs/: TECHNICAL.md  api-docs.md  architecture.md  part2a-production-rag-concepts.md  part2b-project-spec.md
docs/future_features/: mem0-user-preference-memory.md
docs/intermediate_thoughts/: docintel_phase1_security_plan.docx  docling.md  llm_engine.md  thinking_response_sample.txt
docs/services/: admin-service.md  analytics-service.md  api-gateway.md  document-service.md  rag-service.md  web-ui.md
lib/docintel-common/: pyproject.toml
lib/docintel-common/docintel_common/: __init__.py  device.py  domain.py  internal_auth.py  messaging.py  model_profile_resolver.py  security.py  tracing.py
lib/docintel-common/tests/: test_messaging.py
notebooks/: evaluation_demo.ipynb  ragas_evaluation.ipynb
scripts/: backfill_acl.py  backup.sh  build.sh  cleanup.sh  db-migrate-schema-separation.sql  docintel.sh  evaluate.py  logs.sh  seed-data.sh  setup-authentik.sh  setup-lmforge.sh  setup-zitadel.sh  setup.sh  start-app.sh  start.sh  stop.sh  test.sh
scripts/lib/: detect_hardware.sh  docker_context.sh  install-lmforge.sh  install_nvidia_toolkit.sh  profile_config.sh  setup-common.sh
services/admin-service/: .dockerignore  Dockerfile  build.gradle.kts  docker-entrypoint.sh
services/analytics-service/: Dockerfile  build.gradle.kts
services/analytics-service-py/: .dockerignore  Dockerfile  pyproject.toml
services/analytics-service-py/src/: config.py  db.py  main.py  models.py
services/analytics-service-py/tests/: test_main.py
services/api-gateway/: Dockerfile  build.gradle.kts
services/data-loader/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/data-loader/src/: config.py  document_client.py  job_registry.py  minio_client.py  stream_publisher.py
services/data-loader/src/adapters/: __init__.py  base.py  huggingface.py
services/data-loader/src/api/: main.py
services/data-loader/tests/: conftest.py  test_api.py  test_huggingface_adapter.py  test_stream_publisher.py
services/document-service/: Dockerfile  build.gradle.kts  gradlew
services/ingestion-service/: Dockerfile  README.md  pyproject.toml
services/ingestion-service/src/: active_model_resolver.py  config.py  db.py  document_client.py  job_registry.py  page_router.py  pdf_probe.py  pipeline.py  stores.py  stream_worker.py
services/ingestion-service/src/adapters/: __init__.py  base.py  huggingface_adapter.py  minio_adapter.py  text_adapter.py
services/ingestion-service/src/api/: dependencies.py  main.py
services/ingestion-service/src/extractors/: digital.py  layout.py  ocr_tesseract.py  vlm.py
services/ingestion-service/tests/: conftest.py  test_api.py  test_dockerfile_hf_cache.py  test_extractors.py  test_job_registry.py  test_page_router.py  test_pipeline_splitter.py  test_stores.py  test_stream_worker.py
services/rag-service/: Dockerfile  README.md  pyproject.toml  pytest.ini
services/rag-service/src/: __init__.py  chunking.py  config.py  context.py  datasets.py  db.py  events.py  prompts.py  schemas.py  stores.py  tracing.py
services/rag-service/src/api/: dependencies.py  main.py  schemas.py
services/rag-service/src/components/: __init__.py  cache.py  embedders.py  generation.py  llm.py  llm_adapter.py  model_profile_resolver.py  model_resolver.py  observability.py  opa.py  prompt.py  query_transform.py  reranker.py  retrieval.py  retriever.py  router.py  routing.py  summarizer.py
services/rag-service/src/pipelines/: __init__.py  indexing.py  query.py
services/rag-service/src/utils/: asyncio.py
services/rag-service/tests/: conftest.py  test_api.py  test_chunking.py  test_components.py  test_datasets.py  test_db_executor.py  test_dependencies.py  test_events.py  test_indexing.py  test_llm_adapter.py  test_model_profile_resolver.py  test_pipelines.py  test_query.py  test_rag_service_stream.py
services/rag-service/tests/resources/: contract_saas_agreement.txt  technical_api_docs.txt
services/web-ui/: .dockerignore  .env.example  Dockerfile  docker-entrypoint.sh  nginx.conf  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js  vite.config.ts
services/web-ui/src/: app.css  app.html  hooks.client.ts
services/web-ui/static/: env-config.js
services/web-ui/tests/: chat.spec.ts  documents.spec.ts  (+1 more)
tasks/: 01-proxmox-hardware-setup.md  02-lmforge-changes.md  03-docintel-changes.md  model-profiles-vlm-ui.md  todo.md
terraform/environments/: dev.identity.tfvars  dev.infra.tfvars
tests/contract/: test_contracts.py  test_sse_contract.py
tests/integration/: calibrate_threshold.py  metrics.py  queries.yaml  requirements.txt  run_tests.py
tests/scripts/: test_compose_profile_args.py  test_detect_hardware.bats  test_dockerfile_torch_arg.py  test_profile_config.bats
(+155 files in other folders)
