[project]
name = "docintel-common"
version = "0.1.0"
description = "Shared utilities for DocIntel services — domain classification, device detection, and domain constants"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Domain classifier (DeBERTa zero-shot, used by ingestion-service + rag-service)
    "transformers>=4.40.0",
    # Device detection (MPS / CUDA / CPU)
    "torch>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docintel_common"]
