[project]
name = "docintel-common"
version = "0.1.0"
description = "Shared utilities for DocIntel services — domain classification, device detection, and domain constants"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Domain classifier (DeBERTa zero-shot, used by ingestion-service + rag-service)
    "transformers>=4.40.0",
    # Device detection (MPS / CUDA / CPU)
    "torch>=2.0.0",
    # Security models (DocumentACL, UserContext, etc.)
    "pydantic>=2.0",
    # Redis Streams message bus (optional — only loaded if messaging module is imported)
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "fakeredis>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docintel_common"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
