[project]
name = "ingestion-service"
version = "0.1.0"
description = "DocIntel Ingestion Service — structure-aware document parsing, chunking, embedding and indexing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Shared DocIntel library (domain classifier, device detection)
    "docintel-common",

    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",

    # Docling — structure-aware document parsing + chunking
    "docling-haystack>=0.1.1",

    # RAG Framework — Haystack ingestion pipeline
    "haystack-ai>=2.9.0",
    "qdrant-haystack>=6.0.0",
    "qdrant-client>=1.16.0",

    # Embeddings via Ollama (GPU/Metal-accelerated)
    "ollama-haystack>=6.0.0",

    # Hybrid search — BM25 sparse vectors (query side uses same model in rag-service)
    # fastembed-haystack provides the Haystack component; fastembed is the underlying library
    "fastembed-haystack>=1.1.0",
    "fastembed>=0.4.0",

    # MinIO (direct object storage access)
    "minio>=7.2.0",

    # Database (direct PG access for chunk persistence)
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",

    # Domain classification (DeBERTa zero-shot)
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "accelerate>=0.26.0",

    # HuggingFace dataset loading
    "datasets>=3.2.0",

    # Observability
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.21.0",

    # Resilience
    "tenacity>=8.2.0",

    # Bounded in-memory caches
    "cachetools>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.uv.sources]
docintel-common = { path = "../../lib/docintel-common" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
